Openbicing fork of citybikes, will delete the old repo

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This is the release version
+This is a version that only works on Barcelona.
+
+With its name, openBicing, it gets better visibility inside Android Market
+
+Haters Gonna Hate!
