--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -15,7 +15,7 @@
  * limitations under the License.
  */ -->
 <resources>
-    <string name="app_name">CityBikes</string>
+    <string name="app_name">Open Bicing</string>
     <string name="menu_sync">Sincronizar</string>
     <string name="menu_location">Mi ubicación</string>
     <string name="menu_view_all">Ver todas</string>
