--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
  * limitations under the License.
  */ -->
 <resources>
-    <string name="app_name">Open Bicing</string>
+    <string name="app_name">openVelib</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_location">My Location</string>
     <string name="menu_view_all">View All</string>
