--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is the release version
+This is the main version of CityBikes
+
+Other projects (as openBicing, openVelib, hang and should be updated from here, somehow, will have to ask the git wizards for info)
