* fixed bug: When syncing in parking mode, station overlay showed wrong color * closed stations (0 bikes, 0 free space) are now less visible * Added pop-up to tell the mode of the application when pressing switch

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="sure">Sure</string>
     <string name="automatic">Automatic</string>
     
-    
+    <string name="get_bike_mode">Find a bike</string>
+    <string name="park_bike_mode">Find a parking</string>
 </resources>
