First draft of favourites

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,6 @@
     <string name="bike_network_alert_success_text1">Is that accurate?</string>
     <string name="sure">Sure</string>
     <string name="automatic">Automatic</string>
-    
+    <string name="bookmark_station">Bookmark</string>
     
 </resources>
