This merge was a pain..
Corrected merge!

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -15,7 +15,7 @@
  * limitations under the License.
  */ -->
 <resources>
-    <string name="app_name">openVelib</string>
+    <string name="app_name">Open Bicing</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_location">Ma position</string>
     <string name="menu_view_all">Tout voir</string>
